# swagger_server/swagger/swagger.yaml
@@ -58,6 +58,266 @@ paths:
               schema:
                 $ref: "#/components/schemas/ResponseError"
       x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
+  /get/all-licenses-vehicles:
+    get:
+      tags:
+      - Catalogs
+      summary: Obtiene todos las placas de los vehículos
+      description: Devuelve todos los vehiculos de la base
+      operationId: get_all_licenses
+      parameters:
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "TECHNICAL_MOVIL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
+  /get/all-reasons:
+    get:
+      tags:
+      - Catalogs
+      summary: Obtiene todos las razones / motivos
+      description: Devuelve todos las razones / motivos de la base
+      operationId: get_all_reasons
+      parameters:
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "TECHNICAL_MOVIL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
+  /get/all-copilot-vehicles:
+    get:
+      tags:
+      - Catalogs
+      summary: Obtiene todos los copilotos de los vehículos
+      description: Devuelve todos los copilotos de vehiculos de la base
+      operationId: get_all_copilot
+      parameters:
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "TECHNICAL_MOVIL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
+  /get/all-projects:
+    get:
+      tags:
+      - Catalogs
+      summary: Obtiene todos los proyectos de clientes
+      description: Devuelve todos los proyectos de clientes de la base
+      operationId: get_all_projects
+      parameters:
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "TECHNICAL_MOVIL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
+  /get/all-level-gasoline:
+    get:
+      tags:
+      - Catalogs
+      summary: Obtiene todos los niveles de gasolina
+      description: Devuelve todos los niveles de gasolina de la base
+      operationId: get_all_level_gasoline
+      parameters:
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "TECHNICAL_MOVIL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
   /post/technical-control:
     post:
       tags:
@@ -136,14 +396,17 @@ components:
         id_driver:
           type: integer
           example: 1
-        initial_gasoline:
-          type: string
-          example: "3/4"
-        final_gasoline:
-          type: string
-          example: "3/4"
+        initial_gasoline_id:
+          type: integer
+          example: 1
+        final_gasoline_id:
+          type: integer
+          example: 2
           nullable: true
         initial_km:
+          type: string
+          example: "1"
+        final_km:
           type: string
           example: "1"
         driver_companion:
@@ -151,8 +414,11 @@ components:
           items:
             type: integer
           example: [1,2,3]
-        route_point:
+        destiny:
           type: string
+        exit_point:
+          type: string
+          example: "Telearseg"
         observations:
           type: string
           nullable: true
@@ -173,13 +439,16 @@ components:
             format: binary
       example:
         created_at: 2022-02-03 13:58:00
-        id_level_gasoline: 4
+        initial_gasoline_id: 4
+        final_gasoline_id: 4
         reasons: [1,2,3]
         project: [1,2,3]
         id_truck_license: 1
-        initial_km: 15555
+        initial_km: "15555"
+        final_km: "155"
         driver_companion: [1,2,3]
-        route_point: Expalsa
+        exit_point: Telearseg
+        destiny: Expalsa
         observations: Sin observacion
         initial_images: []
         final_images: []
