# swagger_server/uses_cases/technical_use_case.py
@@ -14,3 +14,18 @@ class TechnicalUseCase:
 
     def get_all_drivers(self, internal, external):
         return self.technical_control_repository.get_all_drivers(internal, external)
+    
+    def get_all_licenses(self, internal, external):
+        return self.technical_control_repository.get_all_licenses(internal, external)
+    
+    def get_all_reasons(self, internal, external):
+        return self.technical_control_repository.get_all_reasons(internal, external)
+    
+    def get_all_copilot(self, internal, external):
+        return self.technical_control_repository.get_all_copilot(internal, external)
+    
+    def get_all_projects(self, internal, external):
+        return self.technical_control_repository.get_all_projects(internal, external)
+    
+    def get_all_level_gasoline(self, internal, external):
+        return self.technical_control_repository.get_all_level_gasoline(internal, external)
